# fpgad

./: .git_components.yaml  .gitignore  .gitlint  .licensesnip  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  PUBLISHING.md  README.md  testflinger-cargo-kv260.yaml  testflinger-reserve-only-kv260.yaml
.github/: labeler.yml
.github/testflinger-assets/: device-script.sh  env_setup.sh  test_binary_device_script.sh  test_snap_device_script.sh  testflinger_job.yaml
.github/workflows/: cargo-publish.yml  cla-check.yml  integration_tests.yaml.yml  integration_tests.yml  labeler.yml  linter.yml  release.yml  snap_integration_tests.yml  snap_store_integration_tests.yml  tics_scan.yml
cli/: Cargo.toml  README.md
cli/src/: dfx_mgr.rs  lib.rs  load.rs  main.rs  remove.rs  set.rs  status.rs  universal.rs  xlnx_sys.rs
cli/src/proxies/: configure_proxy.rs  control_proxy.rs  mod.rs  status_proxy.rs
daemon/: Cargo.toml  README.md
daemon/src/: comm.rs  config.rs  error.rs  lib.rs  main.rs  platforms.rs  softeners.rs  system_io.rs
daemon/src/comm/: README.md  dbus.rs
daemon/src/comm/dbus/: control_interface.rs  mod.rs  status_interface.rs
daemon/src/softeners/: README.md  error.rs  softeners_thread.rs  xilinx_dfx_mgr.rs  xilinx_dfx_mgr_fpga.rs  xilinx_dfx_mgr_helpers.rs  xilinx_dfx_mgr_overlay_handler.rs
daemon/src/softeners/xilinx_dfx_mgr/: xilinx_dfx_mgr_fpga.rs  xilinx_dfx_mgr_helpers.rs  xilinx_dfx_mgr_overlay_handler.rs
daemon/tests/: README.md  integration_tests.rs  universal.rs  xilinx_dfx_mgr.rs  xilinx_sys.rs
daemon/tests/common/: mod.rs  proxies.rs  test_functions.rs
daemon/tests/common/proxies/: control_proxy.rs  status_proxy.rs
daemon/tests/integration_tests/: system_io.rs  universal.rs
daemon/tests/integration_tests/universal/control/: set_fpga_flags.rs  write_bitstream_direct.rs  write_property.rs
daemon/tests/integration_tests/universal/sequences/: bitstream_management.rs  overlay_management.rs
daemon/tests/integration_tests/universal/status/: get_fpga_flags.rs  get_fpga_state.rs  get_overlay_status.rs  get_overlays.rs  get_platform_type.rs  get_platform_types.rs  read_property.rs
daemon/tests/test_data/: com.canonical.fpgad.conf  not_an_overlay.dtbo  overlay_invalid_utf8_firmware.dtbo  overlay_invalid_utf8_firmware.dts  overlay_no_firmware_name.dtbo  overlay_no_firmware_name.dts  overlay_nonexistent_firmware.dtbo  overlay_nonexistent_firmware.dts
daemon/tests/test_data/k24-starter-kits/: k24_starter_kits.dtbo
daemon/tests/universal/: control.rs  sequences.rs  status.rs
daemon/tests/universal/control/: remove_bitstream.rs  set_bytes.rs  set_fpga_flags.rs  write_bitstream_direct.rs  write_property.rs
daemon/tests/universal/sequences/: bitstream_management.rs  overlay_management.rs  status_reporting.rs
daemon/tests/universal/status/: get_fpga_flags.rs  get_fpga_state.rs  get_overlay_status.rs  get_overlays.rs  get_platform_type.rs  get_platform_types.rs  get_status_message.rs  read_property.rs
daemon/tests/xilinx_dfx_mgr/: control.rs  platform_selection.rs  sequences.rs  status.rs
daemon/tests/xilinx_dfx_mgr/control/: apply_overlay.rs  dfx_mgr.rs  set_fpga_flags.rs  write_bitstream_direct.rs  write_property.rs
daemon/tests/xilinx_dfx_mgr/sequences/: bitstream_management.rs  overlay_management.rs
daemon/tests/xilinx_dfx_mgr/status/: get_fpga_flags.rs  get_fpga_state.rs  get_overlay_status.rs  get_overlays.rs  get_platform_type.rs  get_platform_types.rs  get_status_message.rs  read_property.rs
daemon/tests/xilinx_sys/: control.rs  status.rs
daemon/tests/xilinx_sys/control/: remove_bitstream.rs  set_bytes.rs  set_fpga_flags.rs  write_bitstream_direct.rs  write_property.rs
daemon/tests/xilinx_sys/sequences/: bitstream_management.rs  overlay_management.rs
daemon/tests/xilinx_sys/status/: get_fpga_flags.rs  get_fpga_state.rs  get_overlay_status.rs  get_overlays.rs  get_platform_type.rs  get_platform_types.rs  get_status_message.rs  read_property.rs
data/: config.toml
data/dbus/: com.canonical.fpgad.conf
data/systemd/: fpgad-load-defaults.service  fpgad.service
docs/: code_coverage.md
fpgad_api/: Cargo.toml
fpgad_api/src/: control.rs  lib.rs  status.rs
fpgad_api/src/proxies/: mod.rs
fpgad_macros/: Cargo.toml  README.md
fpgad_macros/src/: lib.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: main.rs  universal.rs
integration-tests/src/universal/: test_control.rs  test_sequence.rs  test_status.rs
scripts/: test_wrapper.sh
scripts/ci/: check_pull_request.py  check_version_bump.py  requirements.txt
scripts/ci/gitlint/: fpgad_commit_rules.py
snap/: snapcraft.yaml
snap/assets/: softener_wrapper
snap/hooks/: component-dfx-mgr-install  component-dfx-mgr-post-refresh  component-dfx-mgr-remove  connect-plug-dfx-mgr-socket  connect-plug-run-dfx-mgrd-socket  install  post-refresh
src/: config.rs  error.rs  main.rs  service.rs  softeners.rs  system_io.rs
src/comm/: README.md  dbus.rs  mod.rs
src/comm/dbus/: configure_interface.rs  control_interface.rs  interfaces.rs  mod.rs  status_interface.rs
src/config/: boot_firmware.rs  config_files.rs  mod.rs  system_config.rs
src/softeners/: error.rs  mod.rs  xilinx_dfx_mgr.rs
tests/: coverage_test.sh  snap_tests.py
tests/concurent_load/: test_concurrent_load.sh
tests/snap_testing/: QUICK_REFERENCE.sh  README.md  __init__.py  test_snap.sh
tests/snap_testing/common/: __init__.py  base_test.py  helpers.py
tests/snap_testing/test_default/: __init__.py  test_cli_options.py  test_dfx_mgr_command.py  test_help.py  test_universal_command.py  test_xilinx_sys_command.py
tests/snap_testing/test_universal/: __init__.py  test_bitstream.py  test_overlay.py  test_set.py  test_status.py
tests/snap_testing/test_xilinx_sys/: __init__.py  test_bitstream.py  test_overlay.py  test_set.py  test_status.py
tests/snap_testing/test_xlnx/: __init__.py  test_bitstream.py  test_dfx_mgr_guards.py  test_overlay.py  test_set.py  test_status.py
tests/threadsafe/: test_config_thread_stress.sh
