[workspace]
resolver = "3"
members = ["daemon", "cli", "fpgad_macros"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "GPL-3.0"
homepage = "https://github.com/canonical/fpgad"
repository = "https://github.com/canonical/fpgad"
authors = ["Talha Can Havadar <talha.can.havadar@canonical.com>", "Artie Poole <stuart.poole@canonical.com>"]

[workspace.dependencies]
fpgad_macros = { version = "0.4.0", path = "fpgad_macros" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"
codegen-units = 1
