[package]
name = "fpga"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.46.0", features = ["full"] }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }
tabled = "0.20.0"