[package]
name = "daemon"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "An FPGA manager daemon that handles the dirty work for you."
homepage = "https://github.com/talhaHavadar/fpgad"
repository = "https://github.com/talhaHavadar/fpgad"
readme = "README.md"

[features]
default = ["softeners-all"]
softeners-all = ["softeners", "xilinx-dfx-mgr"]
softeners = []
xilinx-dfx-mgr = ["softeners"]

[dependencies]
fpgad_macros = { path = "../fpgad_macros" }
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.47.0", features = ["full"] }
zbus = { version = "5.9.0", default-features = false, features = ["tokio"] }
thiserror = "2.0.12"

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"