[package]
name = "fpgad"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "An FPGA manager daemon that handles the dirty work for you."
readme = "README.md"
keywords = ["fpga", "daemon", "embedded", "hardware", "xilinx"]
categories = ["hardware-support", "embedded"]

[features]
default = ["softeners-all"]
softeners-all = ["softeners", "xilinx-dfx-mgr"]
softeners = []
xilinx-dfx-mgr = ["softeners"]

[dependencies]
fpgad_macros = { workspace = true }
log = "0.4.27"
env_logger = { version = "0.11.8", default-features = false }
tokio = { version = "1.47.0", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
zbus = { version = "5.9.0", default-features = false, features = ["tokio"] }
thiserror = "2.0.12"

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"