[package]
name = "fpgad_macros"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Macro crate of fpgad"
homepage = "https://github.com/talhaHavadar/fpgad"
repository = "https://github.com/talhaHavadar/fpgad"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "^2.0"
quote = "^1.0"
