[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { version = "5.8.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
